force-app/main/default/objects/Location/fields/Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Access_Notes__c</fullName>
    <description>Created per story 12957</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>