force-app/main/default/objects/Location/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>This is created as part of ADO 13568.</description>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area</valueSetName>
    </valueSet>
</CustomField>