force-app/main/default/objects/Location/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Create per story 12957</description>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Buildings(billing)</relationshipLabel>
    <relationshipName>RelatedBuildings1</relationshipName>
    <type>Lookup</type>
</CustomField>