force-app/main/default/objects/Location/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <description>Created this as part of user story # 13852</description>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private School</fullName>
            </value>
            <value>
                <fullName>Private University / College</fullName>
            </value>
            <value>
                <fullName>Public Library</fullName>
            </value>
            <value>
                <fullName>Public School</fullName>
            </value>
            <value>
                <fullName>Public University / College</fullName>
            </value>
            <value>
                <fullName>Religious Center</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Cinema Complex</fullName>
            </value>
            <value>
                <fullName>Convention / Exhibition Center</fullName>
            </value>
            <value>
                <fullName>Cultural Center</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Sports Complex</fullName>
            </value>
            <value>
                <fullName>Theme Park</fullName>
            </value>
            <value>
                <fullName>Med. Center / Office / Clinic</fullName>
            </value>
            <value>
                <fullName>Private Hospital - Functional</fullName>
            </value>
            <value>
                <fullName>Private Hospital - Premium</fullName>
            </value>
            <value>
                <fullName>Public Hospital</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Center</fullName>
            </value>
            <value>
                <fullName>Retirement / Nursing Home</fullName>
            </value>
            <value>
                <fullName>4+ Start hotel</fullName>
            </value>
            <value>
                <fullName>Budget Hotel / Motel / Hostel</fullName>
            </value>
            <value>
                <fullName>Mid-range Hotel</fullName>
            </value>
            <value>
                <fullName>Restaurant / Bar / Club</fullName>
            </value>
            <value>
                <fullName>Dam</fullName>
            </value>
            <value>
                <fullName>Ind. Park / Factory / Plant</fullName>
            </value>
            <value>
                <fullName>Mining Facility</fullName>
            </value>
            <value>
                <fullName>Oil / Gas Facility</fullName>
            </value>
            <value>
                <fullName>Power Station</fullName>
            </value>
            <value>
                <fullName>Science Park / Labs</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>