force-app/main/default/objects/Location/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created for story 12957</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Building</relationshipLabel>
    <relationshipName>RelatedBuildings</relationshipName>
    <type>Lookup</type>
</CustomField>