force-app/main/default/objects/Location/fields/Dispatch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispatch Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>