force-app/main/default/objects/Location/fields/EBS_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>EBS_Customer_ID__c</fullName>
    <description>created per integration request for story 12957</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>