force-app/main/default/objects/Location/fields/EBS_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>EBS_Site_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS Site ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>