force-app/main/default/objects/Location/fields/IVR_Check_In_Instructions__c.field-meta.xml
<CustomField>
    <fullName>IVR_Check_In_Instructions__c</fullName>
    <description>Created as part of story #12816</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Check-In Instructions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>