force-app/main/default/objects/Location/fields/IVR_PIN__c.field-meta.xml
<CustomField>
    <fullName>IVR_Pin__c</fullName>
    <formula>IF(ISBLANK(IVR_Procedures__c), &apos;&apos;, IVR_Procedures__r.IVR_Pin__c )</formula>
    <label>IVR Pin</label>
    <type>Text</type>
</CustomField>