force-app/main/default/objects/Location/fields/IVR_Procedures__c.field-meta.xml
<CustomField>
    <fullName>IVR_Procedures__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IVR Procedures</label>
    <referenceTo>IVR_Procedures__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>