force-app/main/default/objects/Location/fields/IVR_Required__c.field-meta.xml
<CustomField>
    <fullName>IVR_Required__c</fullName>
    <formula>IF(ISBLANK(IVR_Procedures__c), False, True)</formula>
    <label>IVR Required</label>
    <type>Checkbox</type>
</CustomField>