force-app/main/default/objects/Location/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>US 13841: Used to record the identifier used by the source system (see Legacy_Source__c) for Data Migration, applied during Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>