force-app/main/default/objects/Location/fields/Local_Fire__c.field-meta.xml
<CustomField>
    <fullName>Local_Fire__c</fullName>
    <description>Created per story 12957</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Local Fire #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>