force-app/main/default/objects/Location/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <description>Story #14201</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>