force-app/main/default/objects/Location/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <description>This is created as part of ADO 13568.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>