force-app/main/default/objects/Location/fields/Preferred_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created this as part of user story #13852</description>
    <label>Preferred Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>