force-app/main/default/objects/Location/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>This field is created to hold the record type name which is used in flow to filter TKE Location record type.</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>