force-app/main/default/objects/Location/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This is created as part of ADO 13568.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>