force-app/main/default/objects/Location/fields/SFS_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>SFS_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to service territory. To be used on WorkOrder flow.</description>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>