force-app/main/default/objects/Location/fields/Total_Floors__c.field-meta.xml
<CustomField>
    <fullName>Total_Floors__c</fullName>
    <description>Created this as part of user story #13852</description>
    <label>Total Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>