force-app/main/default/objects/Location/fields/Union_Local__c.field-meta.xml
<CustomField>
    <fullName>Union_Local__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Union Local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>