force-app/main/default/objects/Location/recordTypes/TKE_Location.recordType-meta.xml
<RecordType>
    <fullName>TKE_Location</fullName>
    <active>true</active>
    <description>Record type for TKE created as part of ADO-13568</description>
    <label>TKE Location</label>
</RecordType>