force-app/main/default/objects/Location/listViews/TKE_Locations.listView-meta.xml
<ListView>
    <fullName>TKE_Locations</fullName>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <columns>VisitorAddress</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Customer_Account__c</columns>
    <columns>EBS_Customer_ID__c</columns>
    <columns>EBS_Site_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Union_Local__c</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>contains</operation>
        <value>TKE_Location</value>
    </filters>
    <label>TKE Locations</label>
</ListView>